pacrefs/force-app/main/default/objects/MetaDataFunctionalMap__c/MetaDataFunctionalMap__c.object-meta.xml
<CustomObject>
    <description>Maps metadata items in TPM build to Functional Areas</description>
    <label>MetaDataFunctionalMap</label>
    <nameField>
        <displayFormat>MDFM-{000000}</displayFormat>
        <label>MetaDataFunctionalMap Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MetaDataFunctionalMaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>