pacrefs/force-app/main/default/objects/MetaDataFunctionalMap__c/fields/BuildArtifact__c.field-meta.xml
<CustomField>
    <fullName>BuildArtifact__c</fullName>
    <label>BuildArtifact</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>