pacrefs/force-app/main/default/objects/MetaDataFunctionalMap__c/fields/CountrySpecific__c.field-meta.xml
<CustomField>
    <fullName>CountrySpecific__c</fullName>
    <description>If filled this is specific to a particular country</description>
    <label>CountrySpecific</label>
    <length>40</length>
    <type>Text</type>
</CustomField>