pacrefs/force-app/main/default/objects/MetaDataFunctionalMap__c/fields/FunctionalArea__c.field-meta.xml
<CustomField>
    <fullName>FunctionalArea__c</fullName>
    <label>FunctionalArea</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>